src/main/antlr4/com/tr/rp/parser/RankPL.g4
grammar RankPL;

parse
 : program
 ;
 
program
 : functiondef_or_statement ';' (functiondef_or_statement ';')*  EOF
 ;

functiondef_or_statement
 : functiondef
 | stat
 ;

functiondef
 : Define VAR ('()' | '(' VAR (',' VAR)* ')') '{' (stat ';')* '}'
 ;

stat
 : assignment_target ':=' exp							# AssignmentStatement
 | assignment_target ':=' exp '<<' exp '>>' exp			# ChoiceAssignmentStatement
 | assignment_target ':=' '<<' exp '...' exp '>>'		# RangeChoiceStatement
 | assignment_target ':=' ReadFile '(' exp ')'			# ReadFileStatement
 | assignment_target (op=('++'|'--'))					# IncDecStatement
 | If exp Then stat (Else stat)? 						# IfStatement
 | While exp Do stat									# WhileStatement
 | For '(' stat ';' exp ';' stat ')' stat				# ForStatement
 | Observe exp											# ObserveStatement
 | ObserveL ('(' exp ')')? exp							# ObserveLStatement
 | ObserveJ ('(' exp ')')? exp							# ObserveJStatement
 | Skip													# SkipStatement
 | Nrm ('(' exp ')')? stat Exc stat 					# RankedChoiceStatement
 | Either stat (Or stat)+								# IndifferentChoiceStatement
 | '{' stat (';' stat)* ';'? '}'						# StatementSequence
 | Return exp											# ReturnStatement
 | Print exp											# PrintStatement
 | Cut exp												# CutStatement
 | Assert '(' exp (',' exp)* ')'						# AssertStatement
 ;


exp : expr0;

expr0
 : expr1  ('?' expr1 ':' expr1)?						# ConditionalExpression
 ;
 
expr1
 : expr2 (aop=('&'|'&&'|'|'|'||'|'^') expr1)?	 		# BoolExpression
 ;

expr2
 : expr3 (cop=('<'|'<='|'>'|'>='|'=='|'!=') expr2)? 	# CompareExpr
 ;

expr3
 : expr4 (aop=('+'|'-') expr3)?	 						# Arithmetic1Expression
 ;

expr4
 : expr5 (aop=('*'|'/'|'%') expr4)?						# Arithmetic2Expression
 ;

expr5
 : expr6 index*											# IndexedExpression		/* supports both arrays and dictionaries */
 | expr6 '.' VAR 										# FieldExpression		/* for accessing dictionaries */
 ;

expr6
 : INT													# LiteralIntExpression
 | True				 					 				# LiteralBoolExpr
 | False			 					 				# LiteralBoolExpr
 | QUOTED_STRING										# LiteralStringExpr
 | variable 											# VariableExpression
 | Infer '(' VAR ('()' | ('(' (exp (',' exp)*) ')')) ')'# InferringFunctionCall
 | VAR ('()' | ('(' (exp (',' exp)*) ')'))				# FunctionCall
 | '!' expr6 				                 			# NegateExpr
 | '-' expr6 			     	            			# MinusExpr
 | Isset '(' exp ')'    								# IsSetExpr
 | Abs '(' exp ')'      				   				# AbsExpr
 | Min '(' (exp (',' exp)*) ')'      				   	# MinExpr
 | Max '(' (exp (',' exp)*) ')'      				   	# MaxExpr
 | ParseInt '(' exp ')'       				   			# ParseIntExpr
 | Len '(' exp ')' 		 								# LenExpr
 | Substring '(' exp ',' exp ',' exp ')' 				# SubStringExpr
 | Rank '(' exp ')' 	 								# RankExpr
 | Array '(' exp (',' exp)? ')' 						# ArrayInitExpr
 | '[' (exp (',' exp)* )? ']'							# ArrayConstructExpr
 | '{' (VAR ':=' exp (',' VAR ':=' exp)*)? '}' 			# DictionaryExpression 	/* supports index expressions with strings as well as field expressions */
 | '(' exp ')' 											# ParExpression
 ;

Define:			'define' | 'DEFINE';
ReadFile:		'readfile' | 'READFILE';
If: 			'if' | 'IF';
Then: 			'then' | 'THEN';
Else: 			'else' | 'ELSE';
While: 			'while' | 'WHILE';
Do: 			'do' | 'DO';
For: 			'for' | 'FOR';
Observe: 		'observe' | 'OBSERVE' | 'obs' | 'OBS';
ObserveL: 		'observe-l' | 'observe-L' | 'OBSERVE-L' | 'obs-l' | 'obs-L' | 'OBS-L';
ObserveJ: 		'observe-j' | 'observe-J' | 'OBSERVE-J' | 'obs-j' | 'obs-J' | 'OBS-J';
Skip: 			'skip' | 'SKIP';
Nrm: 			'normally' | 'NORMALLY' | 'nrm' | 'NRM';
Exc: 			'exceptionally' | 'EXCEPTIONALLY' | 'exc' | 'EXC';
Either: 		'either' | 'EITHER';
Or: 			'or' | 'OR';
Return: 		'return' | 'RETURN';
Print: 			'print' | 'PRINT';
Cut: 			'cut' | 'CUT';
Assert: 		'assert' | 'ASSERT';
True: 			'true' | 'TRUE';
False: 			'false' | 'FALSE';
Infer: 			'infer' | 'INFER';
Isset: 			'isset' | 'ISSET';
Abs: 			'abs' | 'ABS';
ParseInt:		'parseint' | 'parseInt' | 'PARSEINT';
Min: 			'min' | 'MIN';
Max: 			'max' | 'MAX';
Len: 			'len' | 'LEN';
Substring: 		'substring' | 'SUBSTRING';
Rank: 			'rank' | 'RANK';
Array: 			'array' | 'ARRAY';

variable
 : VAR
 ;

index
 : '[' exp ']'
 ;

assignment_target
 : VAR index*		#IndexAssignmentTarget
 | VAR '.' VAR		#FieldAssignmentTarget
 ;
   
VAR
 : ([a-z] | [A-Z]) ( [a-z] | [A-Z] | [0-9] | '_' )*
 ;

INT
 : [0-9]+
 ;

QUOTED_STRING 
 : '"' SCHAR* '"'
 ;

fragment
SCHAR
    :   ~["\\\r\n]
    |   ESCAPE_SEQUENCE
    |   '\\\n'   // Added line
    |   '\\\r\n' // Added line
    ;

fragment
ESCAPE_SEQUENCE
    :   '\\' ['"?abfnrtv\\]
    ;

COMMENT
 : '#' ~[\r\n]* -> skip
 ;

SPACE
 : [ \t\r\n] -> skip
 ;

OTHER
 : . 
 ;
 
