src/main/antlr4/com/tr/rp/parser/com/tr/rp/parser/RankPLParser.java
// Generated from RankPL.g4 by ANTLR 4.7
package com.tr.rp.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RankPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, Define=36, ReadFile=37, If=38, 
		Then=39, Else=40, While=41, Do=42, For=43, Observe=44, ObserveL=45, ObserveJ=46, 
		Skip=47, Nrm=48, Exc=49, Either=50, Or=51, Return=52, Print=53, Cut=54, 
		Assert=55, True=56, False=57, Infer=58, Isset=59, Abs=60, ParseInt=61, 
		Min=62, Max=63, Len=64, Substring=65, Rank=66, Array=67, VAR=68, INT=69, 
		QUOTED_STRING=70, COMMENT=71, SPACE=72, OTHER=73;
	public static final int
		RULE_parse = 0, RULE_program = 1, RULE_functiondef_or_statement = 2, RULE_functiondef = 3, 
		RULE_stat = 4, RULE_exp = 5, RULE_expr0 = 6, RULE_expr1 = 7, RULE_expr2 = 8, 
		RULE_expr3 = 9, RULE_expr4 = 10, RULE_expr5 = 11, RULE_expr6 = 12, RULE_variable = 13, 
		RULE_index = 14, RULE_assignment_target = 15;
	public static final String[] ruleNames = {
		"parse", "program", "functiondef_or_statement", "functiondef", "stat", 
		"exp", "expr0", "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
		"variable", "index", "assignment_target"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'()'", "'('", "','", "')'", "'{'", "'}'", "':='", "'<<'", 
		"'>>'", "'...'", "'++'", "'--'", "'?'", "':'", "'&'", "'&&'", "'|'", "'||'", 
		"'^'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'.'", "'!'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"Define", "ReadFile", "If", "Then", "Else", "While", "Do", "For", "Observe", 
		"ObserveL", "ObserveJ", "Skip", "Nrm", "Exc", "Either", "Or", "Return", 
		"Print", "Cut", "Assert", "True", "False", "Infer", "Isset", "Abs", "ParseInt", 
		"Min", "Max", "Len", "Substring", "Rank", "Array", "VAR", "INT", "QUOTED_STRING", 
		"COMMENT", "SPACE", "OTHER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RankPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RankPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Functiondef_or_statementContext> functiondef_or_statement() {
			return getRuleContexts(Functiondef_or_statementContext.class);
		}
		public Functiondef_or_statementContext functiondef_or_statement(int i) {
			return getRuleContext(Functiondef_or_statementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(RankPLParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			functiondef_or_statement();
			setState(35);
			match(T__0);
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (T__5 - 6)) | (1L << (Define - 6)) | (1L << (If - 6)) | (1L << (While - 6)) | (1L << (For - 6)) | (1L << (Observe - 6)) | (1L << (ObserveL - 6)) | (1L << (ObserveJ - 6)) | (1L << (Skip - 6)) | (1L << (Nrm - 6)) | (1L << (Either - 6)) | (1L << (Return - 6)) | (1L << (Print - 6)) | (1L << (Cut - 6)) | (1L << (Assert - 6)) | (1L << (VAR - 6)))) != 0)) {
				{
				{
				setState(36);
				functiondef_or_statement();
				setState(37);
				match(T__0);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Functiondef_or_statementContext extends ParserRuleContext {
		public FunctiondefContext functiondef() {
			return getRuleContext(FunctiondefContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public Functiondef_or_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondef_or_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterFunctiondef_or_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitFunctiondef_or_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitFunctiondef_or_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Functiondef_or_statementContext functiondef_or_statement() throws RecognitionException {
		Functiondef_or_statementContext _localctx = new Functiondef_or_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functiondef_or_statement);
		try {
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Define:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				functiondef();
				}
				break;
			case T__5:
			case If:
			case While:
			case For:
			case Observe:
			case ObserveL:
			case ObserveJ:
			case Skip:
			case Nrm:
			case Either:
			case Return:
			case Print:
			case Cut:
			case Assert:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctiondefContext extends ParserRuleContext {
		public TerminalNode Define() { return getToken(RankPLParser.Define, 0); }
		public List<TerminalNode> VAR() { return getTokens(RankPLParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(RankPLParser.VAR, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public FunctiondefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterFunctiondef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitFunctiondef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitFunctiondef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctiondefContext functiondef() throws RecognitionException {
		FunctiondefContext _localctx = new FunctiondefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functiondef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Define);
			setState(51);
			match(VAR);
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(52);
				match(T__1);
				}
				break;
			case T__2:
				{
				setState(53);
				match(T__2);
				setState(54);
				match(VAR);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(55);
					match(T__3);
					setState(56);
					match(VAR);
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(62);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			match(T__5);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (T__5 - 6)) | (1L << (If - 6)) | (1L << (While - 6)) | (1L << (For - 6)) | (1L << (Observe - 6)) | (1L << (ObserveL - 6)) | (1L << (ObserveJ - 6)) | (1L << (Skip - 6)) | (1L << (Nrm - 6)) | (1L << (Either - 6)) | (1L << (Return - 6)) | (1L << (Print - 6)) | (1L << (Cut - 6)) | (1L << (Assert - 6)) | (1L << (VAR - 6)))) != 0)) {
				{
				{
				setState(66);
				stat();
				setState(67);
				match(T__0);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SkipStatementContext extends StatContext {
		public TerminalNode Skip() { return getToken(RankPLParser.Skip, 0); }
		public SkipStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterSkipStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitSkipStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitSkipStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RankedChoiceStatementContext extends StatContext {
		public TerminalNode Nrm() { return getToken(RankPLParser.Nrm, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode Exc() { return getToken(RankPLParser.Exc, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public RankedChoiceStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterRankedChoiceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitRankedChoiceStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitRankedChoiceStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncDecStatementContext extends StatContext {
		public Token op;
		public Assignment_targetContext assignment_target() {
			return getRuleContext(Assignment_targetContext.class,0);
		}
		public IncDecStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterIncDecStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitIncDecStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitIncDecStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementSequenceContext extends StatContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public StatementSequenceContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterStatementSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitStatementSequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitStatementSequence(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatementContext extends StatContext {
		public TerminalNode While() { return getToken(RankPLParser.While, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode Do() { return getToken(RankPLParser.Do, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public WhileStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitWhileStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitWhileStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObserveJStatementContext extends StatContext {
		public TerminalNode ObserveJ() { return getToken(RankPLParser.ObserveJ, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ObserveJStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterObserveJStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitObserveJStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitObserveJStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObserveStatementContext extends StatContext {
		public TerminalNode Observe() { return getToken(RankPLParser.Observe, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ObserveStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterObserveStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitObserveStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitObserveStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RangeChoiceStatementContext extends StatContext {
		public Assignment_targetContext assignment_target() {
			return getRuleContext(Assignment_targetContext.class,0);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public RangeChoiceStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterRangeChoiceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitRangeChoiceStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitRangeChoiceStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatementContext extends StatContext {
		public TerminalNode If() { return getToken(RankPLParser.If, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode Then() { return getToken(RankPLParser.Then, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode Else() { return getToken(RankPLParser.Else, 0); }
		public IfStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentStatementContext extends StatContext {
		public Assignment_targetContext assignment_target() {
			return getRuleContext(Assignment_targetContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AssignmentStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitAssignmentStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IndifferentChoiceStatementContext extends StatContext {
		public TerminalNode Either() { return getToken(RankPLParser.Either, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<TerminalNode> Or() { return getTokens(RankPLParser.Or); }
		public TerminalNode Or(int i) {
			return getToken(RankPLParser.Or, i);
		}
		public IndifferentChoiceStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterIndifferentChoiceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitIndifferentChoiceStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitIndifferentChoiceStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReadFileStatementContext extends StatContext {
		public Assignment_targetContext assignment_target() {
			return getRuleContext(Assignment_targetContext.class,0);
		}
		public TerminalNode ReadFile() { return getToken(RankPLParser.ReadFile, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ReadFileStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterReadFileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitReadFileStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitReadFileStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ChoiceAssignmentStatementContext extends StatContext {
		public Assignment_targetContext assignment_target() {
			return getRuleContext(Assignment_targetContext.class,0);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ChoiceAssignmentStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterChoiceAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitChoiceAssignmentStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RankPLVisitor ) return ((RankPLVisitor<? extends T>)visitor).visitChoiceAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStatementContext extends StatContext {
		public TerminalNode Return() { return getToken(RankPLParser.Return, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ReturnStatementContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RankPLListener ) ((RankPLListener)listener).exitReturnStatement(this);
		}
		@Override
